<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/podcast_details_brief_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/brief_description"

        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/podcast_details_image"
        app:layout_constraintTop_toBottomOf="@+id/podcast_name_tv"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolBarSearchResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/app_bar_layout_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/action_up"
                android:layout_width="@dimen/normal_width"
                android:layout_height="@dimen/typical_button_height"
                android:layout_marginStart="@dimen/bigger_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigger_margin"
                android:layout_marginTop="@dimen/bigger_margin"
                android:gravity="start"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/bigger_margin"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/podcast_details_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:contentDescription="@string/podcast_artwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarSearchResult" />

    <TextView
        android:id="@+id/podcast_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/podcast_name"
        app:layout_constraintStart_toEndOf="@+id/podcast_details_image"
        app:layout_constraintTop_toBottomOf="@+id/toolBarSearchResult" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/podcast_details_episodes_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/podcast_details_subscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/subscribe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31040564" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4250441" />

</android.support.constraint.ConstraintLayout>