<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/player_episode_title_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:textAlignment="center"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolBarSearchResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/app_bar_layout_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/action_up_player"
                android:layout_width="@dimen/normal_width"
                android:layout_height="@dimen/typical_button_height"
                android:layout_marginStart="@dimen/bigger_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigger_margin"
                android:layout_marginTop="@dimen/bigger_margin"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />


            <ImageView
                android:id="@+id/player_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigger_margin"
                android:layout_marginTop="@dimen/bigger_margin"
                android:src="@drawable/baseline_favorite_border_white_24" />

            <ImageView
                android:id="@+id/player_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginStart="@dimen/bigger_margin"
                android:layout_marginTop="@dimen/bigger_margin"
                android:src="@drawable/ic_share" />


        </LinearLayout>

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/player_podcast_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:gravity="center"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarSearchResult" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/player_artwork"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:contentDescription="@string/episode_artwork"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6455026" />


</android.support.constraint.ConstraintLayout>